# projects

C# UnoCardGame/: .gitignore  README.md
C# UnoCardGame/UnoCardGame/: UnoCardGame.sln
C# UnoCardGame/UnoCardGame/ConsoleApp/: ChangeRules.cs  ConsoleApp.csproj  GameSetup.cs  (+2 more)
Java homework/: info.json
Java web/: build.gradle  info.json  readme.txt  settings.gradle
PHP homework/: index.php  info.json
PHP homework/ex1/: ex1.php  ex2.php  ex3.php  ex4.php  ex5.php  ex6.php  ex7.php  ex8.php  temperatures-filtered.csv
PHP homework/ex2/: functions.php  temps.php
PHP homework/ex3/: temps.php
PHP homework/ex5/: connection.php  distribute.php  numbers.php
PHP homework/ex6/: tokens.txt
PHP homework/ex7/: OrderLine.php  OrderLineDao.php  ex1.php  ex3.php
PHP homework/proto/: Author.php  Book.php  Dao.php  connection.php  data.sql  styles.css
Python homework/: README.md
TypeScript Atari Breakout game/: index.html  package-lock.json  tsconfig.json
TypeScript Atari Breakout game/src/: app.ts  brain.ts  ui.ts
python-advanced-ics0019/python-advanced-ics0019-41d9745a6874/homework1_coordinates/coordinates/: PKG-INFO  README.md  pyproject.toml
python-advanced-ics0019/python-advanced-ics0019-41d9745a6874/homework1_coordinates/coordinates/src/coordinates.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python-advanced-ics0019/python-advanced-ics0019-41d9745a6874/homework1_coordinates/coordinates/src/coordinates_package/: coordinates.py
python-advanced-ics0019/python-advanced-ics0019-41d9745a6874/homework1_coordinates/coordinates/tests/: test_coordinates.py
(+286 files in other folders)
